--- a/pom.xml
+++ b/pom.xml
@@ -4,4 +4,12 @@
   <artifactId>Agile_project</artifactId>
   <version>0.0.1-SNAPSHOT</version>
   <name>Agile_Project</name>
+<dependencies>
+<dependency>
+    <groupId>org.junit.jupiter</groupId>
+    <artifactId>junit-jupiter-api</artifactId>
+    <version>5.10.2</version>
+    <scope>test</scope>
+</dependency>
+	</dependencies>
 </project>
