--- a/pom.xml
+++ b/pom.xml
@@ -11,5 +11,21 @@
     <version>5.10.2</version>
     <scope>test</scope>
 </dependency>
-	</dependencies>
+</dependencies>
+<build>
+	<pluginManagement>
+		<plugins>
+        <plugin>
+          <groupId>org.sonarsource.scanner.maven</groupId>
+          <artifactId>sonar-maven-plugin</artifactId>
+          <version>3.10.0.2594</version>
+        </plugin>
+        <plugin>
+          <groupId>org.jacoco</groupId>
+          <artifactId>jacoco-maven-plugin</artifactId>
+          <version>0.8.11</version>
+        </plugin>
+      </plugins>
+    </pluginManagement>
+  </build>
 </project>
