Updated sonar properties in pom.xml

--- a/pom.xml
+++ b/pom.xml
@@ -36,9 +36,10 @@
       <activeByDefault>true</activeByDefault>
     </activation>
     <properties>
-      <sonar.host.url>
-        http://localhost:9000
-      </sonar.host.url>
+      <sonar.host.url> http://localhost:9000</sonar.host.url>
+      <sonar.username>admin</sonar.username>
+      <sonar.password>admin123</sonar.password>
+      <sonar.projectKey>Agile_Project</sonar.projectKey>
     </properties>
   </profile>
 </profiles>
